<?xml version="1.0"?>
<package>
  <name>ros_tf_graph</name>
  <version>0.1.0</version>
  <description>The ros_tf_graph package is supposed to provide some functionatilies missing in the ROS tf stack. More specifically, it extends the TF tree to a graph so that sensors observing common objects can be calibrated with respect to each other using triangulation.</description>

  <maintainer email="psantana@mit.edu">Pedro Santana</maintainer>
  <license>MIT</license>
  <url type="repository">https://github.com/phrqas/ros-tf-graph</url>
  <author email="psantana@mit.edu">Pedro Santana</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>  
  <build_depend>tf</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
